# rdp-ext

./: CMakeLists.txt  Readme.linux.md  Readme.md  Readme.structure.md  Readme.win.md
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/freerdp_plugin/: CMakeLists.txt  main.cpp
src/apps/mstsc_plugin/: CMakeLists.txt  main.cpp
src/apps/wts_server/: CMakeLists.txt  main.cpp
src/apps/xrdp_server/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/logging/: CMakeLists.txt  logger.cpp  logger.h
src/core/protocol/: CMakeLists.txt  message.h  message_factory.cpp  message_factory.h  serializer.cpp  serializer.h
src/core/telemetry/: CMakeLists.txt  cpu_sample.h  cpu_sampler_linux.cpp  cpu_sampler_linux.h  cpu_sampler_win.cpp  cpu_sampler_win.h  timer_control.h
src/logic/: CMakeLists.txt
src/logic/client/: controller.h  state_machine.cpp  state_machine.h
src/logic/common/: effects.h  events.h  helpers.h  states.h
src/logic/server/: CMakeLists.txt  controller.h  state_machine.cpp  state_machine.h
src/runtime/: CMakeLists.txt  defaults.h  executor.cpp  executor.h  mstsc_runtime.cpp  mstsc_runtime.h  wts_runtime.cpp  wts_runtime.h
src/transport/: CMakeLists.txt  mstsc_transport.cpp  mstsc_transport.h  transport_handlers.h  wts_transport.cpp  wts_transport.h
src/transport/wrappers/: CMakeLists.txt  wts_channel_handle.cpp  wts_channel_handle.h  wts_include.h
test/: CMakeLists.txt
test/protocol/: CMakeLists.txt  creation_tests.cpp  protocol_mock_data.h  protocol_test_helpers.h  serialization_tests.cpp
